--- a/style.css
+++ b/style.css
@@ -1,39 +1,78 @@
+.text {
+  text-align: center;
+  font-weight: 300;
+  text-decoration: #f78120;
+  /* 자간격, 줄간격  */
+  letter-spacing: 15px;
+  line-height: 2;
+}
 
-/* 내용물 정렬 */
+.flex {
+  /* flex로 바꿈 */
+  display: flex;
+
+  /*열 정렬*/
+  flex-direction: column;
+
+  /* 행 정렬 */
+  flex-direction: row;
+
+  /* 모두 동일한 여백 */
+  justify-content: space-around;
+
+  /* 양끝에 여백없이 펼친다 */
+  justify-content: space-between;
+
+  /* 끝으로 붙는다 */
+  justify-content: flex-end;
+
+  /* 가운데정렬 */
+  justify-content: center;
+}
+
 .align {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  align-items: center;
+
+  align-items: flex-end;
+
+  align-items: flex-start;
+  /* 단독행동 */
+  align-self: flex-start;
+
+  /* 줄어들때 행이 여러개 */
+  flex-wrap: wrap;
+  /* 교차축 */
+  align-content: space-around;
 }
 
 /* 배경 커버 멋지게 */
 img {
-    mask-image: url("주소");
-    -webkit-mask-image: url()
+  mask-image: url("주소");
+  -webkit-mask-image: url();
 }
 
 /* 사진 크기 적당하게 알아서 잘 조절 */
 img {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 /* 마우스 갖다대면 자연스럽게 확대 */
 img:hover {
-    transform: scale(1.2);
-    transition: 1s;
+  transform: scale(1.2);
+  transition: 1s;
 }
 
 /* x축 y축으로 틀어짐 */
 .seciton1 {
-    transform: skew(0deg, -10deg)
+  transform: skew(0deg, -10deg);
 }
 
 /* 글자는 원상복귀 */
 .contents {
-    transform: skew(0deg, 10deg)
+  transform: skew(0deg, 10deg);
 }
 
 /* 하나의 이미지 분할로 공유 */
 li {
-    background-attachment: fixed;
+  background-attachment: fixed;
 }
